--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -167,15 +167,15 @@ body {
 }
 /* header */
 .logo {
-    border-top: 4px solid #648880;
     float: left;
-    font-size: 48px;
-    line-height: 44px;
-    padding: 40px 0 22px 0;
+    font-size: 2.5rem;
+    line-height: 10px;
+    padding: 20px 0 11px 0;
     font-weight: 100;
     text-transform: uppercase;
     letter-spacing: .5px;
     text-align: left;
+
 }
 .tagline {
     margin: 66px 0 22px 0;
@@ -390,6 +390,9 @@ table h4 {
 }
 .schedule-offset {
     color: #a9b2b9;
+}
+.container.primary-header.group{
+    position: relative;
 }
 
 
